# mood_tracker

./: .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260710_0000-0001_create_users_table.py  20260710_0100-0002_create_mood_tables.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: mood.py  users.py
backend/app/core/: config.py
backend/app/db/: database.py
backend/app/engine/: __init__.py  emotions.py  features.py  feedback.py  labels.py  matching.py  model.py  params.py  pretrained.py  sanity.py
backend/app/engine/lexicon/: __init__.py  lessico_it.json
backend/app/engine/pretrained/: noema_params.json
backend/app/models/: __init__.py  mood.py  user.py
backend/app/repositories/: feedback.py  model_state.py  turn.py
backend/app/schemas/: mood.py  user.py
backend/app/scripts/: pretrain.py
backend/app/services/: mood.py  user.py
backend/tests/: conftest.py  test_engine.py  test_health.py
frontend/: .env.example  Dockerfile  README.md  env.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
legacy/: NOEMA_documentazione.md  POSIZIONAMENTO.md  PRIVACY.md  README.md  demo.py  evaluate.py  generate_training_data.py  lessico_italiano.py  main.py  noema.py  noema_params.json  requirements.txt  test_data.jsonl  test_noema.py  train.py  training_data.jsonl  (+1 more)
(+11 files in other folders)
